--- BFS应用之 构建包含最短转换路径的图（队列实现#2）：AC版本 - #1 构建的图是反向的(terminal -> depart); #2 DFS的过程也会因为反向图而发生变化（可以使用LinkedList的对象来支持头部插入元素）。---